# vector-deploy-todo-app-2-51

./: Dockerfile  README.md  claude.json  claude.json.backup.1769656759710  claude.json.backup.1769656759717  claude.json.backup.1769656996991  claude.json.backup.1769657461804  claude.json.backup.1769657489113  conftest.py  mypy.ini  prospector.yml  pyproject.toml  pytest.ini  render.yaml
claude/debug/: 7d8963ef-a547-4c86-a1d7-488ba0324620.txt  8a47404b-5e0d-48bd-b174-32c36554711c.txt  8fcc8c76-0211-402d-8c5a-30e9f8c66d5e.txt  98685908-30c6-42d3-bc39-4fc72d4180bd.txt  b464f137-d7aa-4a08-8b20-652a827fe1a4.txt  ba590aa2-9106-4a76-861d-24cd3e6650ae.txt  ef4b6c2b-5c00-40de-b301-ab48308ac26a.txt  fce1f0a0-23c0-4450-b118-8020aa4ac006.txt
claude/instructions/: CLAUDE.md  backend-standards.md  complex-page-standards.md  design-style-guide.md  frontend-standards.md  testing-standards.md
claude/instructions/skills/: run-e2e-tests.md  run-tests.md  scaffold-frontend.md  setup-environment.md  static-check.md  validate-frontend.md
claude/projects/-home-user/: fce1f0a0-23c0-4450-b118-8020aa4ac006.jsonl  sessions-index.json
claude/statsig/: statsig.cached.evaluations.f1ada72661  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
config/: settings.py
config/uv/: uv-receipt.json
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend-config/: package.template.json  vite-additions.ts
frontend/src/: App.tsx
frontend/src/styles/: tokens.css
project/artifacts/: ExecutionSummary.md  Plan.md  Project.md
(+11 files in other folders)
